--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -19,7 +19,10 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-
+          
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+        
       - name: Build with Gradle Wrapper
         run: ./gradlew assembleDebug
 
