--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: chmod +x ./gradlew
         
       - name: Build with Gradle Wrapper
-        run: ./gradlew assembleDebug
+        run: gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
