--- a/.github/workflows/generate-wrapper.yml
+++ b/.github/workflows/generate-wrapper.yml
@@ -14,7 +14,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y gradle
 
       - name: Generate Gradle Wrapper
-        run: gradle wrapper
+        run: gradle wrapper --gradle-version 8.3
 
       - name: Commit wrapper files
         run: |
